--- a/src/shiro.properties
+++ b/src/shiro.properties
@@ -46,3 +46,9 @@
 /casloginHttpHeader=anon
 /v2/api-docs=anon
 /assets/lab/assetslaborder/ElectContoller/** = anon
+
+#投票
+/avicit/cadreselect/dynPerson/dynPersonController/**=anon
+/avicit/cadreselect/dynTemItem/dynTemItemController/** = anon
+/avicit/cadreselect/dynTemplate/dynTemplateController/** = anon
+/avicit/cadreselect/dynVote/dynVoteController=anon
