根据投票id查询投票记录

--- a/src/shiro.properties
+++ b/src/shiro.properties
@@ -51,4 +51,5 @@
 /avicit/cadreselect/dynPerson/dynPersonController/**=anon
 /avicit/cadreselect/dynTemItem/dynTemItemController/** = anon
 /avicit/cadreselect/dynTemplate/dynTemplateController/** = anon
-/avicit/cadreselect/dynVote/dynVoteController=anon
+/avicit/cadreselect/dynVote/dynVoteController/**=anon
+/demo/** = anon
